[gd_scene load_steps=11 format=2]

[ext_resource path="res://Shop.gd" type="Script" id=1]
[ext_resource path="res://Assets/SHOP UI.png" type="Texture" id=2]
[ext_resource path="res://Assets/bibit.png" type="Texture" id=3]
[ext_resource path="res://Assets/pupuk.png" type="Texture" id=4]
[ext_resource path="res://Assets/Pestisida.png" type="Texture" id=5]
[ext_resource path="res://Assets/CLOSE.png" type="Texture" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/zorque.ttf"

[sub_resource type="DynamicFont" id=2]
size = 72
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/zorque.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = SubResource( 3 )

[node name="Shop" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 682.906, 383.625 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = 7.95032
margin_top = -327.805
margin_right = 8.95032
margin_bottom = -150.805
custom_fonts/font = SubResource( 2 )
text = "SHOP"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="Sprite"]
margin_left = -410.0
margin_top = -167.425
margin_right = -409.0
margin_bottom = 9.575
custom_fonts/font = SubResource( 2 )
text = "bibit"
align = 1
autowrap = true

[node name="Label5" type="Label" parent="Sprite"]
margin_left = -410.0
margin_top = 230.0
margin_right = -409.0
margin_bottom = 407.0
custom_fonts/font = SubResource( 2 )
text = "$50"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="Sprite"]
margin_top = -167.425
margin_right = 1.0
margin_bottom = 9.575
custom_fonts/font = SubResource( 2 )
text = "pupuk"
align = 1
autowrap = true

[node name="Label6" type="Label" parent="Sprite"]
margin_top = 230.0
margin_right = 1.0
margin_bottom = 407.0
custom_fonts/font = SubResource( 2 )
text = "$30
"
align = 1
autowrap = true

[node name="Label4" type="Label" parent="Sprite"]
margin_left = 410.0
margin_top = -167.425
margin_right = 411.0
margin_bottom = 9.575
custom_fonts/font = SubResource( 2 )
text = "pestisida"
align = 1
autowrap = true

[node name="Label7" type="Label" parent="Sprite"]
margin_left = 410.0
margin_top = 230.0
margin_right = 411.0
margin_bottom = 407.0
custom_fonts/font = SubResource( 2 )
text = "$20
"
align = 1
autowrap = true

[node name="bibit" type="Button" parent="Sprite"]
editor/display_folded = true
margin_left = -510.0
margin_top = -60.0
margin_right = -290.0
margin_bottom = 180.0
rect_min_size = Vector2( 220, 244 )
focus_mode = 0
flat = true

[node name="Sprite" type="Sprite" parent="Sprite/bibit"]
position = Vector2( 113, 123 )
texture = ExtResource( 3 )

[node name="stock" type="Label" parent="Sprite/bibit"]
margin_left = 175.958
margin_top = 189.4
margin_right = 215.958
margin_bottom = 226.4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "99"
align = 1

[node name="pupuk" type="Button" parent="Sprite"]
editor/display_folded = true
margin_left = -110.0
margin_top = -60.0
margin_right = 110.0
margin_bottom = 184.0
rect_min_size = Vector2( 220, 244 )
focus_mode = 0
flat = true

[node name="Sprite" type="Sprite" parent="Sprite/pupuk"]
position = Vector2( 113, 123 )
texture = ExtResource( 4 )

[node name="stock" type="Label" parent="Sprite/pupuk"]
margin_left = 175.958
margin_top = 189.4
margin_right = 215.958
margin_bottom = 226.4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "99"
align = 1

[node name="pestisida" type="Button" parent="Sprite"]
editor/display_folded = true
margin_left = 310.0
margin_top = -60.0
margin_right = 530.0
margin_bottom = 184.0
rect_min_size = Vector2( 220, 244 )
focus_mode = 0
flat = true

[node name="Sprite" type="Sprite" parent="Sprite/pestisida"]
position = Vector2( 113, 123 )
texture = ExtResource( 5 )

[node name="stock" type="Label" parent="Sprite/pestisida"]
margin_left = 175.958
margin_top = 189.4
margin_right = 215.958
margin_bottom = 226.4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "99"
align = 1

[node name="exit" type="Button" parent="Sprite"]
editor/display_folded = true
margin_left = 601.083
margin_top = -265.66
margin_right = 677.083
margin_bottom = -188.66
flat = true

[node name="Sprite" type="Sprite" parent="Sprite/exit"]
position = Vector2( 37.3149, 38.1304 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )
[connection signal="pressed" from="Sprite/bibit" to="." method="_on_bibit_pressed"]
[connection signal="pressed" from="Sprite/pupuk" to="." method="_on_pupuk_pressed"]
[connection signal="pressed" from="Sprite/pestisida" to="." method="_on_pestisida_pressed"]
[connection signal="pressed" from="Sprite/exit" to="." method="_on_Button_pressed"]
